accessibility improved for home page including missing aria labels and contrast issues (fix)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -515,9 +515,9 @@ hr{
 
 /* footer styles */
 .footer-color{
-  color: var(--washed-white);
-  text-shadow:-1px -1px 0 #000,
-  1px -1px 0 #000,
-  -1px 1px 0 #000,
-  1px 1px 0 #000;
+  color: #000;
+  text-shadow:-1px -1px 0 var(--washed-white),
+  1px -1px 0 var(--washed-white),
+  -1px 1px 0 var(--washed-white),
+  1px 1px 0 var(--washed-white);
 }
